--- a/HrPortalV2.Web/Views/Companies/Index.cshtml
+++ b/HrPortalV2.Web/Views/Companies/Index.cshtml
@@ -5,11 +5,9 @@
 }
 <link href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" rel="stylesheet" />
 <link href="//cdn.datatables.net/responsive/2.2.1/css/responsive.dataTables.min.css" rel="stylesheet" />
-<h2>Index</h2>
+<h2>Firmalar</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+
 <table id="tblRecords" class="table">
     <thead>
         <tr>
