--- a/HrPortalV2.Web/Views/Home/Index.cshtml
+++ b/HrPortalV2.Web/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="row margin-bottom-40 about-header">
         <div class="col-md-12">
             <h1>Kariyerine bir + daha</h1>
-            <h2>Aradığınız işi dakikalar için bulun</h2>
+            <h2>Aradığınız işi dakikalar içinde bulun</h2>
             <button type="button" class="btn btn-danger">Özgeçmişinizi Şimdi Oluşturun</button>
         </div>
     </div>
@@ -22,15 +22,15 @@
         <div class="row">
             <div class="col-lg-8">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for...">
+                    <input type="text" class="form-control" placeholder="Örn: Yazılım, sistem, tasarım...">
                     <span class="input-group-btn">
-                        <button class="btn green-soft uppercase bold" type="button">Search</button>
+                        <button class="btn green-soft uppercase bold" type="button">Ara</button>
                     </span>
                 </div>
             </div>
             <div class="col-lg-4 extra-buttons">
-                <button class="btn grey-steel uppercase bold" type="button">Reset Search</button>
-                <button class="btn grey-cararra font-blue" type="button">Advanced Search</button>
+                <button class="btn grey-steel uppercase bold" type="button">Sıfırla</button>
+                <button class="btn grey-cararra font-blue" type="button">Gelişmiş Arama</button>
             </div>
         </div>
     </div>
