--- a/HrPortalV2.Web/Views/Shared/_Layout.cshtml
+++ b/HrPortalV2.Web/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
 <!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
 <!--[if !IE]><!-->
-<html lang="en">
+<html lang="tr">
 <!--<![endif]-->
 <!-- BEGIN HEAD -->
 <head>
@@ -140,13 +140,6 @@ License: You must have a valid license purchased only from themeforest(the above
                                             Tüm Özgeçmişler
 
                                         </a>
-                                    </li>
-                                    <li aria-haspopup="true" class="menu-dropdown classic-menu-dropdown ">
-                                        <a asp-action="AdvancedSearch" asp-controller="Home">
-                                            Detaylı Ara
-
-                                        </a>
-
                                     </li>
                                 </ul>
                             </div>
@@ -795,36 +788,30 @@ License: You must have a valid license purchased only from themeforest(the above
                     <div class="container">
                         <div class="row">
                             <div class="col-md-3 col-sm-6 col-xs-12 footer-block">
-                                <h2>About</h2>
-                                <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam dolore. </p>
+                                <h2>Hakkında</h2>
+                                <p> Bilişim Kariyer web sitesi öğrencilerimiz tarafından geliştirilmiştir. </p>
                             </div>
                             <div class="col-md-3 col-sm-6 col-xs12 footer-block">
-                                <h2>Subscribe Email</h2>
+                                <h2>E-posta Aboneliği</h2>
                                 <div class="subscribe-form">
                                     <form action="javascript:;">
                                         <div class="input-group">
                                             <input type="text" placeholder="mail@email.com" class="form-control">
                                             <span class="input-group-btn">
-                                                <button class="btn" type="submit">Submit</button>
+                                                <button class="btn" type="submit">Gönder</button>
                                             </span>
                                         </div>
                                     </form>
                                 </div>
                             </div>
                             <div class="col-md-3 col-sm-6 col-xs-12 footer-block">
-                                <h2>Follow Us On</h2>
+                                <h2>Bizi Takip Edin</h2>
                                 <ul class="social-icons">
-                                    <li>
-                                        <a href="javascript:;" data-original-title="rss" class="rss"></a>
-                                    </li>
                                     <li>
                                         <a href="javascript:;" data-original-title="facebook" class="facebook"></a>
                                     </li>
                                     <li>
                                         <a href="javascript:;" data-original-title="twitter" class="twitter"></a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:;" data-original-title="googleplus" class="googleplus"></a>
                                     </li>
                                     <li>
                                         <a href="javascript:;" data-original-title="linkedin" class="linkedin"></a>
@@ -833,7 +820,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                         <a href="javascript:;" data-original-title="youtube" class="youtube"></a>
                                     </li>
                                     <li>
-                                        <a href="javascript:;" data-original-title="vimeo" class="vimeo"></a>
+                                        <a href="javascript:;" data-original-title="instagram" class="instagram"></a>
                                     </li>
                                 </ul>
                             </div>
@@ -852,9 +839,9 @@ License: You must have a valid license purchased only from themeforest(the above
                 <!-- BEGIN INNER FOOTER -->
                 <div class="page-footer">
                     <div class="container">
-                        2016 &copy; Metronic Theme By
-                        <a target="_blank" href="http://keenthemes.com">Keenthemes</a> &nbsp;|&nbsp;
-                        <a href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" title="Purchase Metronic just for 27$ and get lifetime updates for free" target="_blank">Purchase Metronic!</a>
+                        2018 &copy; Bilişim Kariyer - 
+                        <a target="_blank" href="http://www.bilisimegitim.com">Bilişim Eğitim Merkezi</a> 
+                        
                     </div>
                 </div>
                 <div class="scroll-to-top">
@@ -865,41 +852,6 @@ License: You must have a valid license purchased only from themeforest(the above
             </div>
         </div>
     </div>
-    <!-- BEGIN QUICK NAV -->
-    <nav class="quick-nav">
-        <a class="quick-nav-trigger" href="#0">
-            <span aria-hidden="true"></span>
-        </a>
-        <ul>
-            <li>
-                <a href="https://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" target="_blank" class="active">
-                    <span>Purchase Metronic</span>
-                    <i class="icon-basket"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://themeforest.net/item/metronic-responsive-admin-dashboard-template/reviews/4021469?ref=keenthemes" target="_blank">
-                    <span>Customer Reviews</span>
-                    <i class="icon-users"></i>
-                </a>
-            </li>
-            <li>
-                <a href="http://keenthemes.com/showcast/" target="_blank">
-                    <span>Showcase</span>
-                    <i class="icon-user"></i>
-                </a>
-            </li>
-            <li>
-                <a href="http://keenthemes.com/metronic-theme/changelog/" target="_blank">
-                    <span>Changelog</span>
-                    <i class="icon-graph"></i>
-                </a>
-            </li>
-        </ul>
-        <span aria-hidden="true" class="quick-nav-bg"></span>
-    </nav>
-    <div class="quick-nav-overlay"></div>
-    <!-- END QUICK NAV -->
     <!--[if lt IE 9]>
     <script src="/assets/global/plugins/respond.min.js"></script>
     <script src="/assets/global/plugins/excanvas.min.js"></script>
