--- a/HrPortalV2.Web/Views/Shared/_Layout.cshtml
+++ b/HrPortalV2.Web/Views/Shared/_Layout.cshtml
@@ -825,11 +825,12 @@ License: You must have a valid license purchased only from themeforest(the above
                                 </ul>
                             </div>
                             <div class="col-md-3 col-sm-6 col-xs-12 footer-block">
-                                <h2>Contacts</h2>
+                                <h2>İletişim</h2>
                                 <address class="margin-bottom-40">
-                                    Phone: 800 123 3456
-                                    <br> Email:
-                                    <a href="mailto:info@metronic.com">info@metronic.com</a>
+                                    Telefon: 0216 346 26 06
+
+                                    <br> E-posta:
+                                    <a href="mailto:kurumsal@bilisimegitim.com">kurumsal@bilisimegitim.com</a>
                                 </address>
                             </div>
                         </div>
