--- a/HrPortalV2.Web/Views/Jobs/Index.cshtml
+++ b/HrPortalV2.Web/Views/Jobs/Index.cshtml
@@ -1,11 +1,9 @@
 ﻿@model IEnumerable<HrPortalV2.Models.Job>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Tüm İş İlanları";
 }
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
-<h2>İş İlanları</h2>
-
 
 <table id="myTable" class="table">
     <thead>
