--- a/HrPortalV2.Web/Views/Resumes/Index.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Index.cshtml
@@ -9,26 +9,19 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Photo)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.FirstName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.LastName)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Photo)
-            </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.Gender)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MaritalStatus)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MobilePhone)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
+            
             <th>
                 @Html.DisplayNameFor(model => model.TotalExperience)
             </th>
@@ -45,9 +38,6 @@
                 @Html.DisplayNameFor(model => model.LastPosition)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MilitaryStatus)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.LastEducation)
             </th>
             <th>
@@ -60,117 +50,63 @@
                 @Html.DisplayNameFor(model => model.ForeignLanguages)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IsApproved)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IsActive)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Occupation)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreateDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedBy)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UpdateDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UpdatedBy)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IPAddress)
-            </th>
+            
             <th></th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FirstName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Photo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Gender)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.MaritalStatus)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.MobilePhone)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TotalExperience)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IsCurrentlyWorking)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IsSeekingJob)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastCompany)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastPosition)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.MilitaryStatus)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastEducation)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastDepartment)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.GraduationYear)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ForeignLanguages)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IsApproved)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IsActive)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Occupation.Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreateDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreatedBy)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UpdateDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UpdatedBy)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IPAddress)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
-            </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Photo)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Gender)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TotalExperience)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsCurrentlyWorking)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsSeekingJob)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastCompany)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastPosition)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastEducation)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastDepartment)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.GraduationYear)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ForeignLanguages)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Occupation.Name)
+            </td>
+           
+            <td>
+                <a asp-action="Create" asp-controller="Messages" asp-route-id="@item.Id">Mesaj Gönder</a> |
+            </td>
+        </tr>
         }
     </tbody>
 </table>
