--- a/HrPortalV2.Web/Views/Shared/_LoginPartial.cshtml
+++ b/HrPortalV2.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,4 @@
-@using Microsoft.AspNetCore.Identity
+﻿@using Microsoft.AspNetCore.Identity
 
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
@@ -7,19 +7,64 @@
 {
     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
+            @if (User.IsInRole("Company")) {
+            <li style="margin-left:3px;">
+                <button type="button" onclick="window.location='/Jobs/Create'" class="btn btn-default btn-sm">
+                    <i class="icon-bell"></i>
+                    İlan Yayınla
+                </button>
+
+            </li>
+            }
+            @if (User.IsInRole("Candidate")) {
+            <li style="margin-left:3px;">
+                <button type="button" onclick="window.location='/Resumes/Create'" class="btn btn-success btn-sm">
+                    <i class="icon-bell"></i>
+                    CV Oluştur
+                </button>
+
+            </li>
+            }
             <li>
-                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Merhaba @UserManager.GetUserName(User)!</a>
             </li>
             <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Logout</button>
+                <button type="submit" class="btn btn-link navbar-btn navbar-link">Çıkış</button>
             </li>
         </ul>
     </form>
 }
 else
 {
-    <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="Identity" asp-page="/Account/Register">Register</a></li>
-        <li><a asp-area="Identity" asp-page="/Account/Login">Login</a></li>
+    <ul class="nav navbar-nav pull-right" style="margin-top:8px;">
+
+        <li>
+            <button type="button" onclick="window.location='/Identity/Account/Login'" class="btn btn-default btn-sm">
+                <i class="icon-bell"></i>
+                Firma Girişi
+            </button>
+
+        </li>
+        <li style="margin-left:3px;">
+            <button type="button" onclick="window.location='/Jobs/Create'" class="btn btn-default btn-sm">
+                <i class="icon-bell"></i>
+                İlan Yayınla
+            </button>
+
+        </li>
+        <li style="margin-left:10px;">
+            <button type="button" onclick="window.location='/Identity/Account/Login'" class="btn btn-success btn-sm">
+                <i class="icon-bell"></i>
+                Aday Girişi
+            </button>
+
+        </li>
+        <li style="margin-left:3px;">
+            <button type="button" onclick="window.location='/Resumes/Create'" class="btn btn-success btn-sm">
+                <i class="icon-bell"></i>
+                CV Oluştur
+            </button>
+
+        </li>
     </ul>
 }
